--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.1",
+    "mongoose": "^5.11.1",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.88.2",
+    "save": "^2.4.0"
   },
   "devDependencies": {
     "jasmine": "^3.6.3",
